--- a/data/resume.yml
+++ b/data/resume.yml
@@ -1,3 +1,3 @@
 mission_statement: " ... "
 contact_information: "phone: 503-73-8571\nemail:james@lovedthanlost.net"
-resume_url: "http://jamtur01.github.com"
+resume_url: "https://jamtur01.github.com"
